[gd_scene load_steps=7 format=3 uid="uid://bqscnchqapmui"]

[ext_resource type="Script" uid="uid://dpvv2ewb7jl0v" path="res://views/game_result_modal.gd" id="1_modal"]
[ext_resource type="FontFile" uid="uid://dnyg6pd3wordy" path="res://assets/fonts/RHR-CN-0.990/ResourceHanRoundedCN-Heavy.ttf" id="2_xh70q"]
[ext_resource type="PackedScene" uid="uid://iwef11qesvie" path="res://views/bird_house/BirdSlotCard.tscn" id="3_q1jh0"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xh70q"]
bg_color = Color(0.8790061, 0.5875924, 0.30984393, 0.9490196)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.8352941, 0.39607844, 0.32941177, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q1jh0"]
bg_color = Color(0.5774341, 0.617245, 0.5326643, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yo6u8"]
bg_color = Color(0.44796455, 0.484429, 0.40744576, 1)

[node name="GameResultModal" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_modal")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ModalPanel" type="PanelContainer" parent="CenterContainer"]
custom_minimum_size = Vector2(400, 300)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_xh70q")

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/ModalPanel"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="TitleLabel" type="Label" parent="CenterContainer/ModalPanel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_xh70q")
theme_override_font_sizes/font_size = 36
text = "游戏胜利！"
horizontal_alignment = 1

[node name="ScoreLabel" type="Label" parent="CenterContainer/ModalPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Final Score: 0"
horizontal_alignment = 1

[node name="ComboLabel" type="Label" parent="CenterContainer/ModalPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Max Combo: 0"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/ModalPanel/VBoxContainer"]
layout_mode = 2

[node name="NewBirdLabel" type="Label" parent="CenterContainer/ModalPanel/VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "——获得新鸟——"
horizontal_alignment = 1

[node name="BirdSlotCard" parent="CenterContainer/ModalPanel/VBoxContainer/VBoxContainer" instance=ExtResource("3_q1jh0")]
layout_mode = 2
size_flags_horizontal = 4

[node name="ReturnButton" type="Button" parent="CenterContainer/ModalPanel/VBoxContainer"]
custom_minimum_size = Vector2(200, 70)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_q1jh0")
theme_override_styles/pressed = SubResource("StyleBoxFlat_yo6u8")
theme_override_styles/hover = SubResource("StyleBoxFlat_yo6u8")
theme_override_styles/focus = SubResource("StyleBoxFlat_yo6u8")
text = "返回菜单"
